[gd_scene load_steps=4 format=3 uid="uid://c133jex4gilic"]

[ext_resource type="Script" uid="uid://b2pnw8hf6myc3" path="res://GUI/SkillForge/skill_forge_ui.gd" id="1_0n4qx"]
[ext_resource type="StyleBox" uid="uid://bblg5uvit4jtr" path="res://GUI/Inventory/inventory.tres" id="2_4ourt"]
[ext_resource type="PackedScene" uid="uid://catt4bbm6hsq" path="res://GUI/Inventory/inventory_slot_ui.tscn" id="3_70leh"]

[node name="SkillForgeUI" type="Control"]
custom_minimum_size = Vector2(180, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -299.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0n4qx")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = ExtResource("2_4ourt")

[node name="MainContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="InputContainer" type="HBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="InputSlot1" parent="Panel/MainContainer/InputContainer" instance=ExtResource("3_70leh")]
layout_mode = 2

[node name="InputSlot2" parent="Panel/MainContainer/InputContainer" instance=ExtResource("3_70leh")]
layout_mode = 2

[node name="SlotSpacer2" type="Label" parent="Panel/MainContainer/InputContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "="

[node name="OutputSlot" parent="Panel/MainContainer/InputContainer" instance=ExtResource("3_70leh")]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="ForgeButton" type="Button" parent="Panel/MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Ковать
"
